<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailOfFoodActivity">

    <!-- added Toolbar -->
    <include layout="@layout/toolbar_secondary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar_secondary"
        android:orientation="vertical">

        <!-- first -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nameOfFoodItem"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailOfFoodAc_setName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- second water -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/water"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailOfFoodAc_setWater"
                android:layout_width="wrap_content"
                android:maxLength="8"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mlPer100g"
                android:layout_marginStart="15dp"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- third potassium-->
        <LinearLayout
            android:id="@+id/detailOfFoodAc_potassiumTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/potassium"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailOfFoodAc_setPotassium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="8"
                android:layout_marginStart="110dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mgPer100g"
                android:layout_marginStart="15dp"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- fourth phosphorus -->
        <LinearLayout
            android:id="@+id/detailOfFoodAc_phosphorusTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phosphorus"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/detailOfFoodAc_setPhosphorus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="8"
                android:layout_marginStart="115dp"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mgPer100g"
                android:layout_marginStart="15dp"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- fifth sodium -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/border"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sodium"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/detailOfFoodAc_setSodium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:maxLength="8"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mgPer100g"
                android:layout_marginStart="15dp"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:id="@+id/detailOfFoodAc_deteleItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="50dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/buttons_shape"
            android:text="@string/delete"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
